# Agented

./: .gitignore  AGENTS.md  CLAUDE.md  CONVENTIONS.md  GEMINI.md  README.md  SYNC-CHANGELOG.md  justfile
backend/: .env.example  SCHEMA.md  gunicorn.conf.py  pyproject.toml  requirements.txt  run.py
backend/app/: __init__.py  config.py  database.py  logging_config.py  middleware.py
backend/app/db/: __init__.py  agent_memory.py  agents.py  analytics.py  audit_events.py  backends.py  bookmarks.py  bot_memory.py  bot_pipes.py  bot_templates.py  budgets.py  bundle_seeds.py  campaigns.py  chunk_results.py  circuit_breakers.py  commands.py  connection.py  conversation_branches.py  cross_team_insights.py  execution_queue.py  execution_tags.py  executions.py  findings.py  gitops.py  grd.py  health_alerts.py  hooks.py  ids.py  integrations.py  knowledge_graph.py  mcp_servers.py  messages.py  migrations.py  monitoring.py  onboarding.py  payload_transformers.py  plugins.py  pr_assignment.py  products.py  project_sa_instances.py  (+27 more)
backend/app/models/: __init__.py  agent.py  agent_memory.py  analytics.py  audit.py  backend.py  backend_cli.py  bookmark.py  bot_template.py  budget.py  campaign.py  chat_state.py  collaborative.py  command.py  common.py  config_export.py  conversation_branch.py  execution_search.py  finding.py  gitops.py  grd.py  health.py  hook.py  integration.py  knowledge_graph.py  marketplace.py  (+25 more)
backend/scripts/: dedup_ai_accounts_backends.py  generate_key.py  generate_schema.py  run_ai_accounts.py
backend/tests/: conftest.py  test_agent_memory.py  test_agent_memory_vector.py  test_agent_messages.py  test_agent_scheduler.py  test_agents_routes.py  test_analytics.py  test_async_services.py  test_audit_log_coverage.py  test_audit_log_service.py  test_audit_persistence.py  test_audit_routes.py  test_auth_setup.py  test_backend_detection.py  test_backend_service.py  test_bookmarks.py  test_bot_templates.py  test_budget_enforcement.py  test_budget_integration.py  test_budget_service.py  test_bulk_operations.py  test_bundle_plugins.py  test_bundle_seeds.py  test_campaigns.py  test_canvas_save_flow.py  test_chat_mode_streaming.py  test_chat_state.py  test_chat_streaming.py  test_circuit_breaker.py  test_cliproxy_chat.py  test_cliproxy_manager.py  test_commands_routes.py  test_concurrent_operations.py  test_config_export.py  test_conversation_routes.py  test_conversation_services.py  test_cron_support.py  test_dag_validation.py  test_database_crud.py  test_dry_run.py  (+101 more)
(+1761 files in other folders)
