[project]
name = "agented-backend"
version = "0.1.0"
description = "Agented - Bot management and security audit API for webhook automation"
requires-python = ">=3.10"
dependencies = [
    "Flask>=2.2.3,<3.0",
    "flask-openapi3[swagger,redoc,rapidoc,scalar]>=3.0.0",
    "flask-cors>=4.0.0",
    "pydantic>=2.0.0",
    "gunicorn>=21.0.0",
    "pyyaml>=6.0.0",
    "watchdog>=6.0.0",
    "litellm>=1.81.12",
    "httpx>=0.28.1",
    "playwright>=1.40.0",
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
dev = [
    "black==26.1.0",
    "pytest>=7.0.0",
    "ruff>=0.9.7",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501", "E402"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.9.7",
]
