[project]
name = "agented-backend"
version = "0.1.0"
description = "Agented - Bot management and security audit API for webhook automation"
requires-python = ">=3.10"
dependencies = [
    "Flask>=2.2.3,<3.0",
    "flask-openapi3[swagger,redoc,rapidoc,scalar]>=3.0.0",
    "flask-cors>=4.0.0",
    "pydantic>=2.0.0",
    "gunicorn>=21.0.0",
    "pyyaml>=6.0.0",
    "watchdog>=6.0.0",
    "litellm>=1.81.12",
    "httpx>=0.28.1",
    "playwright>=1.40.0",
    "cryptography>=41.0.0",
    "gevent>=24.10.1",
    "python-dotenv>=1.0.0",
    "APScheduler>=3.10.0",
    "pytz>=2023.3",
    "flask-talisman>=1.1.0",
    "flask-limiter>=3.0.0",
    "python-json-logger>=3.2.0",
    "sentry-sdk[flask]>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.9.7",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501", "E402"]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.9.7",
]
